# algosipm

./: .gitignore  pyproject.toml
algosipm/: bar.py  element.py  filter.py  main.py  table.py  util.py
data/: Arsenic.toml  Bohrium.toml  Bromine.toml  Chromium.toml  Cobalt.toml  Copernicium.toml  Copper.toml  Darmstadtium.toml  Dubnium.toml  Dysprosium.toml  Fermium.toml  Flerovium.toml  Gallium.toml  Germanium.toml  Hassium.toml  Iron.toml  Krypton.toml  Lawrencium.toml  Livermorium.toml  Manganese.toml  Meitnerium.toml  Mendelevium.toml  Moscovium.toml  Nickel.toml  Nihonium.toml  Nobelium.toml  Oganesson.toml  Roentgenium.toml  Rubidium.toml  Ruderfordium.toml  Seaborgium.toml  Selenium.toml  Strontium.toml  Tennessine.toml  Titanium.toml  Vanadium.toml  Yttrium.toml  Zinc.toml  Zirconium.toml  actinium.toml  (+78 more)
