[tool.poetry]
name = "algosipm"
version = "0.1.0"
description = ""
authors = ["Janghyub Seo <jhyub06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.4.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
